--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ h1{
 h1,h2{
     text-align: center;
     font-weight: var(--FW2);
+    color: var(--FCOLOR1);
 }
 
 main{
@@ -198,7 +199,16 @@ main{
  {
    header{
       background-size: 100%;
-      font-size: larger;
+      font-size: 3rem;
+   }
+
+   h2{
+      font-size: 2rem;
+   }
+
+   .description,.download_txt,.track_txt{
+      width: 70%;
+      
    }
 
    .heading{
